YLD calculation (single baseline health data & lifetable) works with early compilation of `dw_central`, `dw_lower`, `dw_upper`
Old code commented out. To be removed later.

--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -292,7 +292,7 @@ bestcost_noise_ha_ar_geo <-
 ```
 
 
-```{r morbidity yld with single relative risk}
+```{r YLD with single relative risk}
 
 bestcost_pm_yld_singlebhd  <- 
   bestcost::attribute_yld_from_prevalence(
