Fixed discrepancy between bestcost and AirQ+ lifetable results in the constant air pollution & with newborns case
The issue was that the internal function `fill_right_of_diag` was wrongly applied to the columns `age` and `age_end` (and the `population` columns), instead of being applied to just the `population` columns.

--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -482,7 +482,7 @@ bestcost_pm_yll_lifetable_airqplus_with_newborns <-
     min_age = airqplus_pm_deaths_yll[["input"]]$apply_rr_from_age,
     valuation = 1000)
 
-# View(bestcost_pm_yll_lifetable_airqplus_with_newborns)
+View(bestcost_pm_yll_lifetable_airqplus_with_newborns)
 
 check_bestcost(result_list_bestcost = bestcost_pm_yll_lifetable_airqplus_with_newborns,
                result_vector_alternative = c(3248408.53,	1700230.04,	4786195.41)) # AirQ+ result
