--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -1004,7 +1004,7 @@ check_bestcost(result_list_bestcost = comparison_yld_singlebhd_rr_pif_geo ,
 
 ### Lifetable
 
-```{r comparison deaths lifetable, warning=FALSE}
+```{r comparison deaths lifetable, warning=TRUE}
 
 # DELTA
 
