--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -159,7 +159,7 @@ system.time(bestcost_pm_copd_geo <-
 ```{r single exposure value and user-defined points for relative risk}
 
 # Assess attributable cases using the AirQ+ export as input data
-bestcost_pm_copd_1rr <-
+bestcost_pm_alri_erf_dots <-
   bestcost::attribute_health(
     exp_central = airqplus_pm_copd$mean_concentration,
     cutoff = airqplus_pm_copd$cut_off_value,   
@@ -349,6 +349,26 @@ bestcost_pm_yld_ci <- get_ci(paf = bestcost_pm_yld_singlebhd$main$pop_fraction[1
                              dw_upper = 0.75)
 
 #View(bestcost_pm_yld_ci)
+```
+
+
+```{r correlated exposures}
+
+# Assess attributable cases using the BEST-COST task 1.4 report
+bestcost_pm_no2_mortality_additive <-
+  bestcost::attribute_health(
+    approach_multiexposure = "additive",
+    exp_central = c("pm2.5" = 8.1, "no2" =  10.9),
+    cutoff =  c("pm2.5" = 0, "no2" =  0),
+    bhd_central = 1000, # Fake data just to get a similar value (PAF) as in the T1.4 report
+    rr_central = setNames(c(1.063, 1.031), c("pm2.5", "no2")),
+    erf_increment = 10, 
+    erf_shape = "log_linear")
+
+# View(bestcost_pm_copd_1rr)
+
+check_bestcost(result_list_bestcost = bestcost_pm_copd,
+               result_vector_alternative = airqplus_pm_copd_result)
 ```
 
 
