--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -111,8 +111,8 @@ check_bestcost(result_list_bestcost = bestcost_pm_copd,
 
 # Monetize
 bestcost_pm_copd_costs <- 
-  bestcost::monetize(output = bestcost_pm_copd, 
-                     valuation = 1000)
+  bestcost::include_cost(output = bestcost_pm_copd, 
+                         valuation = 1000)
 ```
 
 
