--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -108,7 +108,10 @@ airqplus_pm_copd_result <-
 
 check_bestcost(result_list_bestcost = bestcost_pm_copd,
                result_vector_alternative = airqplus_pm_copd_result)
+```
 
+
+```{r Monetize a simple case}
 # Monetize
 bestcost_pm_copd_costs <- 
   bestcost::include_cost(output = bestcost_pm_copd, 
