Deprivation weight instead of index in argument. First attempt. No error but to be checked.

--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -118,12 +118,6 @@ bestcost_pm_copd_costs <-
                          valuation = 1000)
 ```
 
-```{r Social aspects in a simple case}
-# Monetize
-bestcost_pm_copd_social <- 
-  bestcost::include_social(output = bestcost_pm_copd, 
-                           deprivation_index = 1000)
-```
 
 
 
@@ -166,6 +160,19 @@ system.time(bestcost_pm_copd_geo <-
     geo_id_aggregated = rep("CH", 1E4),
     info = "PM2.5_copd"))
 
+
+
+
+```
+
+
+
+```{r Social aspects in a simple case, eval=FALSE, include=FALSE}
+# Monetize
+bestcost_pm_copd_geo_social <- 
+  bestcost::include_social(output = bestcost_pm_copd_geo,
+                           geo_id_raw = 1:1E4,
+                           deprivation_weight = as.list(runif_with_seed(1E4, 0.5, 0.8, 1)))
 ```
 
 
