--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -111,6 +111,27 @@ check_bestcost(result_list_bestcost = bestcost_pm_copd,
                result_vector_alternative = airqplus_pm_copd_result)
 ```
 
+```{r Screenshot for poster}
+
+health_impact <- attribute(
+    exposure = 12.3,
+    baseline_health_data = 15000,
+    rr_central = 1.04,
+    rr_lower = 1.02,
+    rr_upper = 1.06,
+    cutoff = 5,
+    erf_shape = "log_linear",
+    info = "scenario_1")
+
+health_impact <- attribute(
+    exposure = 12.3,
+    baseline_health_data = 15000,
+    rr_central = 1.04,
+    cutoff = 5,
+    erf_shape = "log_linear",
+    info = "PM2.5_scenario_1")
+
+```
 
 ```{r Monetize a simple case}
 # Monetize
