--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -111,7 +111,7 @@ check_bestcost(result_list_bestcost = bestcost_pm_copd,
                result_vector_alternative = airqplus_pm_copd_result)
 ```
 
-```{r Screenshot for poster}
+```{r Screenshot for poster, eval=FALSE, include=FALSE}
 
 health_impact <- attribute(
     exposure = 12.3,
@@ -714,7 +714,9 @@ bestcost_pm_yld_lifetable_geluft  <-
     info = input_data_mortality$pollutant[2],
     min_age = input_data_mortality$min_age[2], # min_age = 20,
     duration = 100, 
-    dw_central = 1, dw_lower = 0.1, dw_upper = 10)
+    corrected_discount_rate = 0,
+    dw_central = 1, dw_lower = 0.1, dw_upper = 10
+)
 
 # View(bestcost_pm_yld_lifetable_geluft)
 
